| Bug #48047 | Can't do normal shutdown | ||
|---|---|---|---|
| Submitted: | 14 Oct 2009 16:31 | Modified: | 12 Nov 2009 18:49 |
| Reporter: | Miguel Solorzano | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | mysql-next-mr | OS: | Microsoft Windows (Vista 64-bit) |
| Assigned to: | Vladislav Vaintroub | Target Version: | |
| Triage: | Needs Triage: D2 (Serious) | ||
[14 Oct 2009 16:31]
Miguel Solorzano
[15 Oct 2009 3:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/86894 2900 Vladislav Vaintroub 2009-10-15 Bug #48047 Can't do normal shutdown Fix a regression that crept in when downporting Windows improvements. Instead of a shutdown thread, another thread that handledsocket connection was created.
[31 Oct 2009 8:20]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20091031081410-qkxmjsdzjmj840aq) (version source revid:serg@mysql.com-20091019190146-2g2j9i8aqhnd4a1u) (merge vers: 6.0.14-alpha) (pib:13)
[31 Oct 2009 17:19]
Paul DuBois
Noted in 6.0.14 changelog. Server shutdown failed on Windows. Setting report to NDI pending push to 5.5.x.
[12 Nov 2009 8:22]
Bugs System
Pushed into 5.5.0-beta (revid:alik@sun.com-20091110093229-0bh5hix780cyeicl) (version source revid:mikael@mysql.com-20091102100915-a2nbfxaqprpgptfw) (merge vers: 5.5.0-beta) (pib:13)
[12 Nov 2009 18:49]
Paul DuBois
Noted in 5.5.0 changelog.
