Bug #48047 Can't do normal shutdown

Fix a regression that crept in when downporting Windows improvements.
Instead of a shutdown thread, another thread that  handledsocket connection was created.